fixed problem with map - zoom was too big showed markers on top of each other

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  color: red;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: column;
+  color: red;
+}
